traffic-jam/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traffic-jam
  annotations:
    argocd.argoproj.io/sync-wave: "0"
